# FinalProject-TypeCheck

./: README.md  new-project.cabal
app/: Main.hs  Tensor.hs  Tests.hs
