cabal-version:      2.4
name:               new-project
version:            0.1.0.0
synopsis:           Typesafe tensor operations in Haskell
-- description:
-- bug-reports:
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Haskell
    main-is:          Main.hs
    other-modules:    Tensor
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall